# autoresearch-unified

./: .runner_status.json  CLAUDE.md  README.md  compare_backends.py  compare_datasets.py  convert_dataset.py  dashboard.py  monitor.py  prepare.py  pyproject.toml  requirements.txt  results.tsv  results_dryrun.tsv  results_gemma4-31b_r1.tsv  results_gemma4-31b_r2.tsv  results_gemma4-31b_r3.tsv  results_kimik25_r1.tsv  results_openrouter_test.tsv  results_pr15_sanity.tsv  results_qwen35-397b_r1.tsv  results_qwen35-397b_r2.tsv  results_qwen35-397b_r3.tsv  results_sanity.tsv  run_suite.py  train.py
.github/workflows/: update-benchmark.yml
autoagent-unified/: Dockerfile.base  HANDOFF.md  LICENSE  NOTICE  PLAN.md  TEST_PLAN.md  agent.py  program.md  pyproject.toml
autoagent-unified/autoresearch/: __init__.py  credentials.py  git_manager.py  hardware.py  llm_backend.py  parser.py  power.py  resilience.py  results.py
autoagent-unified/backends/: __init__.py  registry.py
autoagent-unified/drift/: __init__.py  hardware.py  monitor.py  performance.py  strategy.py
autoagent-unified/tests/: test_drift_hardware.py  test_drift_integration.py  test_drift_performance.py  test_drift_strategy.py  test_l2_integration.py  test_parser.py  test_resilience.py  test_results.py
autoagent-unified/tools/: __init__.py  analyze_tool.py  drift_tool.py  hardware_tool.py  train_tool.py
backends/: __init__.py  mlcommons_sampler.py  muon_cuda.py  muon_gaudi.py  muon_mlx.py  muon_mps.py  muon_rocm.py  muon_rocm7.py  power.py  power_report.py  registry.py  wall_power.py
data/: experiments.parquet  hardware.parquet
docs/: arize-tracing-proposal.md  enhancement-strategy-diversity.md  index.html  plan-openrouter-model-comparison.md  power-analysis.md  reasoning-models.md  shared.css  statistical-analysis-5090.md  telemetry-analysis-strategy-diversity.md  wall-power-integration.md
docs/benchmark/: data.json  index.html
docs/course/: index.html
huggingface/: README.md  croissant.json
results/climbmix/: results.tsv  (+8 more)
scripts/: build_benchmark.py  consolidate_results.py  convert_agent_tsv.py  migrate_10col_to_11col.py  migrate_11col_to_14col.py  migrate_14col_to_18col.py  migrate_9col_to_10col.py  normalization_analysis.py  power_analysis.py  prepare_run.sh  publish_run.py  upload_to_hf.py
tests/: conftest.py  test_credentials.py  test_duplicate_detection.py  test_git_manager.py  test_issue28_experiment_limit.py  test_llm_backend.py  test_mlcommons_sampler.py  test_parser.py  test_power.py  test_reasoning_model_support.py  test_resilience.py  test_skip_logging.py  test_strategy_diversity.py  test_wall_power.py
tui/: __init__.py  app.py  credentials.py  experiments.py  git_manager.py  hardware.py  headless.py  llm_backend.py  orchestrator.py  parser.py  resilience.py  results.py  styles.tcss  widgets.py
wiki/: Archive-Cross-Platform-Overview-v1.md  Cross-Platform-Overview.md  Data-Access.md  Dataset-Climbmix.md  Dataset-Cosmopedia-V2.md  Dataset-Fineweb-Edu-High.md  Dataset-Fineweb-Edu.md  Dataset-Fineweb.md  Dataset-Github-Code-Python.md  Dataset-Slimpajama.md  Home.md  Platform-AMD-ROCm.md  Platform-Apple-Metal.md  Platform-Intel-Gaudi.md  Platform-NVIDIA-CUDA.md  Run-M5Max-ClimbMix-v2-Power.md  Sanity-Testing.md
(+33 files in other folders)
