[project]
name = "autoresearch"
version = "1.0.0"
description = "Autonomous LLM-driven GPU pretraining research — unified across NVIDIA, AMD, Intel, and Apple platforms"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "jinja2>=3.1.0,<3.1.5",  # 3.1.5+ breaks Triton codegen on Blackwell (Issue #5)
]

[project.optional-dependencies]
# Platform-specific GPU dependencies
cuda = [
    "torch>=2.6.0",
]
rocm = [
    "torch>=2.6.0",
]
metal = [
    "mlx>=0.5.0",
    "torch>=2.6.0",
]
# Note: Gaudi/HPU torch comes from the Habana Docker container, not pip

# Application layers
tui = [
    "textual>=3.0.0",
]
agent = [
    "textual>=3.0.0",
    "anthropic>=0.40.0",
]
agent-openai = [
    "textual>=3.0.0",
    "openai>=1.0.0",
]
agent-azure = [
    "textual>=3.0.0",
    "openai>=1.0.0",
]
agent-openrouter = [
    "textual>=3.0.0",
    "openai>=1.0.0",  # OpenRouter uses OpenAI SDK with custom base_url
]
agent-all = [
    "textual>=3.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
analysis = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]

# Convenience bundles
all-cuda = [
    "autoresearch[cuda,agent,analysis]",
]
all-rocm = [
    "autoresearch[rocm,agent,analysis]",
]
all-metal = [
    "autoresearch[metal,agent,analysis]",
]
runpod = [
    "autoresearch[all-cuda]",
    "runpod>=1.7.0",
    "ipywidgets>=8.0.0",
]
all = [
    "torch>=2.6.0",
    "textual>=3.0.0",
    "anthropic>=0.40.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]

[tool.setuptools]
packages = [
    "backends",
    "tui",
    "platforms",
    "platforms.metal",
    "platforms.cuda",
    "platforms.rocm",
    "platforms.gaudi",
    "platforms.runpod",
]
